Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "This is a python cell yy valid Python so we will see an error"
+    "This is a python cell y valid Python so we will see an error"
    ]
   },
   {
@@ -184,10 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'bob'"
